--- a/index.html
+++ b/index.html
@@ -1,59 +1,56 @@
 <!DOCTYPE html>
 <html lang="bn">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leads Hunters Team - ঘরে বসে ইনকাম করুন</title>
-    <!-- Google Fonts for Noto Sans Bengali -->
+    <title>Leads Hunters Team - ঘরে বসে ইনকাম করুন (3D Style)</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- This CSS file will contain the 3D styling -->
 </head>
-
 <body>
-    <header class="hero">
-        <div class="container">
-            <h1>Leads Hunters Team-এ যোগ দিন!</h1>
-            <p class="subheadline">প্রতিদিন ৩,০০০ থেকে ৭,০০০ টাকা ইনকাম করুন ঘরে বসে 💰</p>
-            <p class="description">আমাদের Leads Hunters Team-এর অংশ হয়ে অনলাইন মার্কেটিং ও লিড জেনারেশন কাজের মাধ্যমে
-                প্রতিদিন স্থায়ী ইনকাম করুন। এখনই নিচের বাটনে ক্লিক করে ফর্ম পূরণ করুন এবং ইনকাম শুরু করুন।</p>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScfUXNYdWpe9BuUumKDlSezkA-NINDXp8m_QYsacU72W5c8Ag/viewform"
-                target="_blank" class="cta-button">ফর্মটি পূরণ করুন এখনই</a>
+    <header class="hero-3d-container">
+        <div class="hero-content-3d">
+            <h1 class="headline-3d">Leads Hunters Team-এ যোগ দিন!</h1>
+            <p class="subheadline-3d">প্রতিদিন ৩,০০০ থেকে ৭,০০০ টাকা ইনকাম করুন ঘরে বসে 💰</p>
+            <div class="description-box-3d">
+                <p>আমাদের Leads Hunters Team-এর অংশ হয়ে অনলাইন মার্কেটিং ও লিড জেনারেশন কাজের মাধ্যমে প্রতিদিন স্থায়ী ইনকাম করুন। এখনই নিচের বাটনে ক্লিক করে ফর্ম পূরণ করুন এবং ইনকাম শুরু করুন।</p>
+            </div>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScfUXNYdWpe9BuUumKDlSezkA-NINDXp8m_QYsacU72W5c8Ag/viewform" target="_blank" class="cta-button-3d">ফর্মটি পূরণ করুন এখনই</a>
         </div>
     </header>
 
-    <section class="benefits">
-        <div class="container">
-            <div class="benefit-item">
-                <div class="icon">🏠</div> <!-- Unicode house icon -->
+    <section class="benefits-section-3d">
+        <div class="container-3d">
+            <div class="benefit-card-3d">
+                <div class="icon-3d">🏠</div>
                 <h3>ঘরে বসে কাজের সুযোগ</h3>
             </div>
-            <div class="benefit-item">
-                <div class="icon">💸</div> <!-- Unicode money bag icon -->
+            <div class="benefit-card-3d">
+                <div class="icon-3d">💸</div>
                 <h3>দৈনিক ইনকাম নিশ্চিত</h3>
             </div>
-            <div class="benefit-item">
-                <div class="icon">🚀</div> <!-- Unicode rocket icon -->
+            <div class="benefit-card-3d">
+                <div class="icon-3d">🚀</div>
                 <h3>কোনো অভিজ্ঞতা ছাড়াই শুরু</h3>
             </div>
         </div>
     </section>
 
-    <section class="testimonials">
-        <div class="container">
-            <p class="success-text">৫০০+ সদস্য ইতিমধ্যেই কাজ করছেন এবং প্রতিদিন ইনকাম করছেন!</p>
+    <section class="testimonials-section-3d">
+        <div class="container-3d">
+            <div class="testimonial-box-3d">
+                <p class="success-text-3d">৫০০+ সদস্য ইতিমধ্যেই কাজ করছেন এবং প্রতিদিন ইনকাম করছেন!</p>
+            </div>
         </div>
     </section>
 
-    <footer>
-        <div class="container">
+    <footer class="footer-3d">
+        <div class="container-3d">
             <p>© 2025 Leads Hunters Team | সর্বস্বত্ব সংরক্ষিত।</p>
         </div>
     </footer>
 
-    <!-- Link to your JavaScript file for smooth scroll or other interactions if any -->
-    <script src="smooth-scroll.js"></script>
+    <!-- Link to your JavaScript file if any complex 3D animations/interactions are planned -->
+    <script src="interactive-3d.js"></script>
 </body>
-
 </html>
