--- a/index.html
+++ b/index.html
@@ -3,54 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leads Hunters Team - ঘরে বসে ইনকাম করুন (3D Style)</title>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"> <!-- This CSS file will contain the 3D styling -->
+    <title>Leads Hunters Team - ক্যারিয়ার সুযোগ</title>
+    <!-- Google Fonts for Noto Sans Bengali (for clean, modern Bangla typography) -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Your Custom CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="hero-3d-container">
-        <div class="hero-content-3d">
-            <h1 class="headline-3d">Leads Hunters Team-এ যোগ দিন!</h1>
-            <p class="subheadline-3d">প্রতিদিন ৩,০০০ থেকে ৭,০০০ টাকা ইনকাম করুন ঘরে বসে 💰</p>
-            <div class="description-box-3d">
-                <p>আমাদের Leads Hunters Team-এর অংশ হয়ে অনলাইন মার্কেটিং ও লিড জেনারেশন কাজের মাধ্যমে প্রতিদিন স্থায়ী ইনকাম করুন। এখনই নিচের বাটনে ক্লিক করে ফর্ম পূরণ করুন এবং ইনকাম শুরু করুন।</p>
-            </div>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScfUXNYdWpe9BuUumKDlSezkA-NINDXp8m_QYsacU72W5c8Ag/viewform" target="_blank" class="cta-button-3d">ফর্মটি পূরণ করুন এখনই</a>
+
+    <header class="main-header">
+        <div class="container">
+            <nav class="navbar">
+                <a href="#" class="logo">Leads Hunters Team</a>
+                <a href="#join-now" class="nav-button">যোগ দিন</a>
+            </nav>
         </div>
     </header>
 
-    <section class="benefits-section-3d">
-        <div class="container-3d">
-            <div class="benefit-card-3d">
-                <div class="icon-3d">🏠</div>
-                <h3>ঘরে বসে কাজের সুযোগ</h3>
+    <section class="hero-section">
+        <div class="container">
+            <div class="hero-content">
+                <h1>Leads Hunters Team-এ যোগ দিন!</h1>
+                <p class="subheadline">প্রতিদিন ৩,০০০ থেকে ৭,০০০ টাকা ইনকাম করুন ঘরে বসে 💰</p>
+                <p class="description">আমাদের Leads Hunters Team-এর অংশ হয়ে অনলাইন মার্কেটিং ও লিড জেনারেশন কাজের মাধ্যমে প্রতিদিন স্থায়ী ইনকাম করুন। এখনই নিচের বাটনে ক্লিক করে ফর্ম পূরণ করুন এবং ইনকাম শুরু করুন।</p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScfUXNYdWpe9BuUumKDlSezkA-NINDXp8m_QYsacU72W5c8Ag/viewform" target="_blank" class="cta-button pulse" id="join-now">
+                    <i class="fas fa-hand-pointer"></i> ফর্মটি পূরণ করুন এখনই
+                </a>
+                <p class="success-text">৫০০+ সদস্য ইতিমধ্যেই কাজ করছেন এবং প্রতিদিন ইনকাম করছেন!</p>
             </div>
-            <div class="benefit-card-3d">
-                <div class="icon-3d">💸</div>
-                <h3>দৈনিক ইনকাম নিশ্চিত</h3>
-            </div>
-            <div class="benefit-card-3d">
-                <div class="icon-3d">🚀</div>
-                <h3>কোনো অভিজ্ঞতা ছাড়াই শুরু</h3>
-            </div>
-        </div>
-    </section>
-
-    <section class="testimonials-section-3d">
-        <div class="container-3d">
-            <div class="testimonial-box-3d">
-                <p class="success-text-3d">৫০০+ সদস্য ইতিমধ্যেই কাজ করছেন এবং প্রতিদিন ইনকাম করছেন!</p>
+            <div class="hero-image">
+                <!-- An image relevant to online earning/teamwork could go here -->
+                <img src="https://via.placeholder.com/600x400/007bff/ffffff?text=Online+Earning+Team" alt="Leads Hunters Team - Online Earning">
             </div>
         </div>
     </section>
 
-    <footer class="footer-3d">
-        <div class="container-3d">
-            <p>© 2025 Leads Hunters Team | সর্বস্বত্ব সংরক্ষিত।</p>
+    <section class="benefits-section">
+        <div class="container">
+            <h2>আমাদের সাথে কাজ করার সুবিধা</h2>
+            <div class="benefits-grid">
+                <div class="benefit-card">
+                    <div class="icon-circle">
+                        <i class="fas fa-home"></i>
+                    </div>
+                    <h3>ঘরে বসে কাজের সুযোগ</h3>
+                    <p>আপনার সুবিধামত সময়ে, পৃথিবীর যেকোনো স্থান থেকে কাজ করুন।</p>
+                </div>
+                <div class="benefit-card">
+                    <div class="icon-circle">
+                        <i class="fas fa-sack-dollar"></i>
+                    </div>
+                    <h3>দৈনিক ইনকাম নিশ্চিত</h3>
+                    <p>প্রতিদিন আপনার কাজের ফলস্বরূপ নিশ্চিত ইনকাম পান।</p>
+                </div>
+                <div class="benefit-card">
+                    <div class="icon-circle">
+                        <i class="fas fa-graduation-cap"></i>
+                    </div>
+                    <h3>কোনো অভিজ্ঞতা ছাড়াই শুরু</h3>
+                    <p>আমরা আপনাকে শুরু থেকে সবকিছু শিখিয়ে দেব, অভিজ্ঞতার প্রয়োজন নেই।</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="call-to-action-bottom">
+        <div class="container">
+            <div class="cta-content">
+                <h2>আপনার ইনকামের যাত্রা শুরু করুন আজই!</h2>
+                <p>আর দেরি নয়! Leads Hunters Team-এ যোগ দিয়ে আপনার অনলাইন ইনকামের স্বপ্ন পূরণ করুন।</p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScfUXNYdWpe9BuUumKDlSezkA-NINDXp8m_QYsacU72W5c8Ag/viewform" target="_blank" class="cta-button bottom-cta">
+                    <i class="fas fa-clipboard-list"></i> ফর্মটি পূরণ করুন এখনই
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <footer class="main-footer">
+        <div class="container">
+            <p>&copy; 2025 Leads Hunters Team | সর্বস্বত্ব সংরক্ষিত।</p>
+            <div class="footer-links">
+                <a href="#">গোপনীয়তা নীতি</a>
+                <a href="#">শর্তাবলী</a>
+            </div>
         </div>
     </footer>
 
-    <!-- Link to your JavaScript file if any complex 3D animations/interactions are planned -->
-    <script src="interactive-3d.js"></script>
+    <!-- Smooth scroll JavaScript (optional, but good for UX) -->
+    <script>
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+    </script>
 </body>
 </html>
