--- a/index.html
+++ b/index.html
@@ -8,8 +8,451 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Your Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+
+    <style>
+        /* General Styles & Typography */
+        :root {
+            --primary-blue: #007bff;
+            --secondary-blue: #0056b3;
+            --accent-green: #28a745;
+            --light-gray: #f8f9fa;
+            --dark-text: #333;
+            --light-text: #666;
+            --white: #fff;
+            --shadow-light: rgba(0, 0, 0, 0.1);
+            --shadow-medium: rgba(0, 0, 0, 0.15);
+        }
+
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: 'Noto Sans Bengali', sans-serif;
+            line-height: 1.6;
+            color: var(--dark-text);
+            background-color: var(--light-gray);
+            -webkit-font-smoothing: antialiased;
+            scroll-behavior: smooth;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        a {
+            text-decoration: none;
+            color: var(--primary-blue);
+        }
+
+        h1, h2, h3 {
+            font-weight: 700;
+            margin-bottom: 15px;
+        }
+
+        h1 { font-size: 2.8em; }
+        h2 { font-size: 2.2em; }
+        h3 { font-size: 1.6em; }
+
+        p {
+            margin-bottom: 15px;
+        }
+
+        /* Header & Navigation */
+        .main-header {
+            background-color: var(--white);
+            box-shadow: 0 2px 10px var(--shadow-light);
+            padding: 15px 0;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo {
+            font-size: 1.8em;
+            font-weight: 700;
+            color: var(--primary-blue);
+        }
+
+        .nav-button {
+            background-color: var(--primary-blue);
+            color: var(--white);
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .nav-button:hover {
+            background-color: var(--secondary-blue);
+        }
+
+        /* Hero Section */
+        .hero-section {
+            background: linear-gradient(to right, #e0f2f7, var(--white)); /* Light gradient background */
+            padding: 80px 0;
+            display: flex;
+            align-items: center;
+            min-height: 70vh;
+        }
+
+        .hero-section .container {
+            display: flex;
+            align-items: center;
+            gap: 40px;
+        }
+
+        .hero-content {
+            flex: 1;
+            max-width: 600px;
+        }
+
+        .hero-content h1 {
+            font-size: 3.2em;
+            color: var(--primary-blue);
+            line-height: 1.2;
+            margin-bottom: 20px;
+        }
+
+        .hero-content .subheadline {
+            font-size: 1.6em;
+            color: var(--dark-text);
+            font-weight: 500;
+            margin-bottom: 25px;
+        }
+
+        .hero-content .description {
+            font-size: 1.1em;
+            color: var(--light-text);
+            line-height: 1.7;
+            margin-bottom: 30px;
+        }
+
+        .hero-image {
+            flex: 1;
+            text-align: center;
+        }
+
+        .hero-image img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px var(--shadow-medium);
+        }
+
+        .cta-button {
+            display: inline-flex;
+            align-items: center;
+            background-color: var(--accent-green);
+            color: var(--white);
+            padding: 18px 35px;
+            font-size: 1.3em;
+            font-weight: 700;
+            border-radius: 8px;
+            transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 8px 20px rgba(40, 167, 69, 0.3);
+            margin-bottom: 25px;
+            gap: 10px;
+        }
+
+        .cta-button i {
+            font-size: 1.2em;
+        }
+
+        .cta-button:hover {
+            background-color: #218838; /* Darker green */
+            transform: translateY(-3px);
+            box-shadow: 0 12px 25px rgba(40, 167, 69, 0.4);
+        }
+
+        /* Pulse animation for CTA button */
+        .pulse {
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.03); box-shadow: 0 10px 25px rgba(40, 167, 69, 0.45); }
+            100% { transform: scale(1); }
+        }
+
+        .success-text {
+            font-size: 1.2em;
+            font-weight: 500;
+            color: var(--primary-blue);
+            border-left: 5px solid var(--primary-blue);
+            padding-left: 15px;
+            margin-top: 20px;
+        }
+
+
+        /* Benefits Section */
+        .benefits-section {
+            background-color: var(--white);
+            padding: 80px 0;
+            text-align: center;
+            box-shadow: inset 0 5px 15px var(--shadow-light);
+        }
+
+        .benefits-section h2 {
+            color: var(--primary-blue);
+            margin-bottom: 50px;
+            position: relative;
+            display: inline-block;
+        }
+
+        .benefits-section h2::after {
+            content: '';
+            position: absolute;
+            left: 50%;
+            bottom: -10px;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 4px;
+            background-color: var(--accent-green);
+            border-radius: 2px;
+        }
+
+        .benefits-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 30px;
+            margin-top: 40px;
+        }
+
+        .benefit-card {
+            background-color: var(--light-gray);
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 5px 15px var(--shadow-light);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border: 1px solid #e9ecef;
+        }
+
+        .benefit-card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 10px 25px var(--shadow-medium);
+        }
+
+        .icon-circle {
+            width: 70px;
+            height: 70px;
+            background-color: var(--primary-blue);
+            color: var(--white);
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2.2em;
+            margin: 0 auto 20px auto;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .benefit-card h3 {
+            color: var(--primary-blue);
+            margin-bottom: 10px;
+        }
+
+        .benefit-card p {
+            font-size: 0.95em;
+            color: var(--light-text);
+        }
+
+        /* Bottom Call to Action */
+        .call-to-action-bottom {
+            background: linear-gradient(135deg, var(--primary-blue), var(--secondary-blue));
+            color: var(--white);
+            padding: 70px 0;
+            text-align: center;
+            margin-top: 60px;
+        }
+
+        .cta-content h2 {
+            color: var(--white);
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        .cta-content p {
+            font-size: 1.2em;
+            max-width: 800px;
+            margin: 0 auto 40px auto;
+            opacity: 0.9;
+        }
+
+        .bottom-cta {
+            background-color: var(--accent-green);
+            box-shadow: 0 10px 25px rgba(40, 167, 69, 0.4);
+        }
+
+        .bottom-cta:hover {
+            background-color: #218838;
+            transform: translateY(-5px);
+            box-shadow: 0 15px 30px rgba(40, 167, 69, 0.5);
+        }
+
+        /* Footer */
+        .main-footer {
+            background-color: #343a40;
+            color: var(--white);
+            padding: 30px 0;
+            text-align: center;
+            font-size: 0.9em;
+        }
+
+        .main-footer .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .main-footer p {
+            margin-bottom: 10px;
+        }
+
+        .footer-links a {
+            color: var(--light-gray);
+            margin: 0 10px;
+            transition: color 0.3s ease;
+        }
+
+        .footer-links a:hover {
+            color: var(--primary-blue);
+        }
+
+        /* Responsive Design */
+        @media (max-width: 992px) {
+            .hero-section .container {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .hero-image {
+                margin-top: 40px;
+            }
+
+            .hero-content h1 {
+                font-size: 2.5em;
+            }
+
+            .hero-content .subheadline {
+                font-size: 1.4em;
+            }
+
+            .cta-button {
+                font-size: 1.15em;
+                padding: 15px 30px;
+            }
+
+            .benefits-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .cta-content h2 {
+                font-size: 2em;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .main-header {
+                padding: 10px 0;
+            }
+
+            .logo {
+                font-size: 1.5em;
+            }
+
+            .nav-button {
+                padding: 8px 15px;
+                font-size: 0.9em;
+            }
+
+            .hero-section {
+                padding: 60px 0;
+                min-height: auto;
+            }
+
+            .hero-content h1 {
+                font-size: 2em;
+            }
+
+            .hero-content .subheadline {
+                font-size: 1.1em;
+            }
+
+            .hero-content .description {
+                font-size: 1em;
+            }
+
+            .cta-button {
+                font-size: 1em;
+                padding: 12px 25px;
+            }
+
+            .benefits-section {
+                padding: 60px 0;
+            }
+
+            .benefits-section h2 {
+                font-size: 1.8em;
+            }
+
+            .call-to-action-bottom {
+                padding: 50px 0;
+            }
+
+            .cta-content h2 {
+                font-size: 1.8em;
+            }
+
+            .cta-content p {
+                font-size: 1em;
+            }
+
+            .main-footer p, .footer-links a {
+                font-size: 0.8em;
+            }
+
+            .footer-links {
+                margin-top: 10px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 0 15px;
+            }
+
+            .navbar {
+                flex-direction: column;
+                gap: 15px;
+            }
+            .nav-button {
+                width: 100%;
+                text-align: center;
+            }
+
+            .hero-content h1 {
+                font-size: 1.8em;
+            }
+            .hero-content .subheadline {
+                font-size: 1em;
+            }
+            .success-text {
+                font-size: 1em;
+                padding-left: 10px;
+            }
+        }
+    </style>
 </head>
 <body>
 
