--- a/index.html
+++ b/index.html
@@ -479,3 +479,69 @@
             </div>
             <div class="hero-image">
                 <!-- সুন্দর ডিজাইনের ইমেজ এখানে জেনারেট করা হয়েছে -->
+<!-- <img src="https://via.placeholder.com/600x400/007bff/ffffff?text=Online+Earning+Team" alt="Leads Hunters Team - Online Earning"> -->
+</div>
+<section class="benefits-section">
+    <div class="container">
+        <h2>আমাদের সাথে কাজ করার সুবিধা</h2>
+        <div class="benefits-grid">
+            <div class="benefit-card">
+                <div class="icon-circle">
+                    <i class="fas fa-home"></i>
+                </div>
+                <h3>ঘরে বসে কাজের সুযোগ</h3>
+                <p>আপনার সুবিধামত সময়ে, পৃথিবীর যেকোনো স্থান থেকে কাজ করুন।</p>
+            </div>
+            <div class="benefit-card">
+                <div class="icon-circle">
+                    <i class="fas fa-sack-dollar"></i>
+                </div>
+                <h3>দৈনিক ইনকাম নিশ্চিত</h3>
+                <p>প্রতিদিন আপনার কাজের ফলস্বরূপ নিশ্চিত ইনকাম পান।</p>
+            </div>
+            <div class="benefit-card">
+                <div class="icon-circle">
+                    <i class="fas fa-graduation-cap"></i>
+                </div>
+                <h3>কোনো অভিজ্ঞতা ছাড়াই শুরু</h3>
+                <p>আমরা আপনাকে শুরু থেকে সবকিছু শিখিয়ে দেব, অভিজ্ঞতার প্রয়োজন নেই।</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="call-to-action-bottom">
+    <div class="container">
+        <div class="cta-content">
+            <h2>আপনার ইনকামের যাত্রা শুরু করুন আজই!</h2>
+            <p>আর দেরি নয়! Leads Hunters Team-এ যোগ দিয়ে আপনার অনলাইন ইনকামের স্বপ্ন পূরণ করুন।</p>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScfUXNYdWpe9BuUumKDlSezkA-NINDXp8m_QYsacU72W5c8Ag/viewform" target="_blank" class="cta-button bottom-cta">
+                <i class="fas fa-clipboard-list"></i> ফর্মটি পূরণ করুন এখনই
+            </a>
+        </div>
+    </div>
+</section>
+
+<footer class="main-footer">
+    <div class="container">
+        <p>&copy; 2025 Leads Hunters Team | সর্বস্বত্ব সংরক্ষিত।</p>
+        <div class="footer-links">
+            <a href="#">গোপনীয়তা নীতি</a>
+            <a href="#">শর্তাবলী</a>
+        </div>
+    </div>
+</footer>
+
+<!-- Smooth scroll JavaScript (optional, but good for UX) -->
+<script>
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+            e.preventDefault();
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+                behavior: 'smooth'
+            });
+        });
+    });
+</script>
+</body>
+</html>
