--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
 
         /* Hero Section */
         .hero-section { background: linear-gradient(to right, #e0f2f7, var(--white)); padding:80px 0; display:flex; align-items:center; min-height:70vh; }
-        .hero-section .container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:50px; flex-wrap: wrap; }
-        .hero-content { flex:1; max-width:600px; text-align:left; }
+        .hero-section .container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:40px; }
+        .hero-content { flex:1; max-width:600px; }
         .hero-content h1 { font-size:3.2em; color:var(--primary-blue); line-height:1.2; margin-bottom:20px; }
         .hero-content .subheadline { font-size:1.6em; color:var(--dark-text); font-weight:500; margin-bottom:25px; }
         .hero-content .description { font-size:1.1em; color:var(--light-text); line-height:1.7; margin-bottom:30px; }
         .hero-image { flex:1; text-align:center; }
         .hero-image img { max-width:100%; height:auto; border-radius:15px; box-shadow:0 10px 30px var(--shadow-medium); }
-
         .cta-button { display:inline-flex; align-items:center; background-color:var(--accent-green); color:var(--white); padding:18px 35px; font-size:1.3em; font-weight:700; border-radius:8px; transition:0.3s; box-shadow:0 8px 20px rgba(40,167,69,0.3); margin-bottom:25px; gap:10px; }
         .cta-button i { font-size:1.2em; }
         .cta-button:hover{ background-color:#218838; transform:translateY(-3px); box-shadow:0 12px 25px rgba(40,167,69,0.4);}
@@ -77,28 +76,10 @@
         .footer-links a:hover{ color:var(--primary-blue); }
 
         /* Responsive */
-        @media (max-width:1200px){
-            .hero-section .container{ flex-direction: column; text-align:center;}
-            .hero-content{text-align:center;}
-            .hero-image{margin-top:40px;}
-        }
+        @media (max-width:992px){ .hero-section .container{ flex-direction:column; text-align:center;} .hero-image{ margin-top:40px;} .cta-content h2{ font-size:2em;} .cta-content p{ font-size:1em;} }
+        @media (max-width:768px){ .hero-content h1{ font-size:2em;} .hero-content .subheadline{ font-size:1.1em;} .cta-button{ font-size:1em; padding:12px 25px; } }
+        @media (max-width:480px){ .navbar{ flex-direction:column; gap:15px; } .hero-content h1{ font-size:1.8em; } }
 
-        @media (max-width:992px){ 
-            .hero-content h1{ font-size:2.5em; } 
-            .hero-content .subheadline{ font-size:1.4em; } 
-            .cta-button{ font-size:1.2em; padding:15px 30px; } 
-        }
-
-        @media (max-width:768px){ 
-            .hero-content h1{ font-size:2em;} 
-            .hero-content .subheadline{ font-size:1.2em; } 
-            .cta-button{ font-size:1em; padding:12px 25px; } 
-        }
-
-        @media (max-width:480px){ 
-            .navbar{ flex-direction:column; gap:15px; } 
-            .hero-content h1{ font-size:1.8em; } 
-        }
     </style>
 </head>
 <body>
@@ -122,7 +103,8 @@
             <p class="success-text">৫০০+ সদস্য ইতিমধ্যেই কাজ করছেন এবং প্রতিদিন ইনকাম করছেন!</p>
         </div>
         <div class="hero-image">
-            <img src="https://via.placeholder.com/600x400/007bff/ffffff?text=Online+Earning+Team" alt="Leads Hunters Team">
+            <!-- Optional Image -->
+            <!-- <img src="https://via.placeholder.com/600x400/007bff/ffffff?text=Online+Earning+Team" alt="Leads Hunters Team"> -->
         </div>
     </div>
 </section>
@@ -185,3 +167,4 @@
 </script>
 </body>
 </html>
+
