--- a/index.html
+++ b/index.html
@@ -34,30 +34,15 @@
         .nav-button:hover{ background-color:var(--secondary-blue); }
 
         /* Hero Section */
-        .hero-section { background: linear-gradient(to right, #e0f2f7, var(--white)); padding:60px 20px; display:flex; align-items:center; min-height:70vh; }
-        .hero-section .container { max-width:1200px; margin:0 auto; display:flex; align-items:center; justify-content:space-between; gap:30px; flex-wrap:nowrap; }
-
-        .hero-content {
-            flex:1;
-            max-width: none;
-            text-align:left;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-        .hero-content h1,
-        .hero-content .subheadline,
-        .hero-content .description,
-        .hero-content .success-text {
-            display: inline-block;
-            margin-right: 40px;
-            font-size: 2em;
-        }
-
+        .hero-section { background: linear-gradient(to right, #e0f2f7, var(--white)); padding:80px 0; display:flex; align-items:center; min-height:70vh; }
+        .hero-section .container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:40px; }
+        .hero-content { flex:1; max-width:600px; }
+        .hero-content h1 { font-size:3.2em; color:var(--primary-blue); line-height:1.2; margin-bottom:20px; }
+        .hero-content .subheadline { font-size:1.6em; color:var(--dark-text); font-weight:500; margin-bottom:25px; }
+        .hero-content .description { font-size:1.1em; color:var(--light-text); line-height:1.7; margin-bottom:30px; }
         .hero-image { flex:1; text-align:center; }
         .hero-image img { max-width:100%; height:auto; border-radius:15px; box-shadow:0 10px 30px var(--shadow-medium); }
-
-        .cta-button { display:inline-flex; align-items:center; background-color:var(--accent-green); color:var(--white); padding:22px 50px; font-size:1.6em; font-weight:700; border-radius:8px; transition:0.3s; box-shadow:0 8px 20px rgba(40,167,69,0.3); margin-bottom:25px; gap:10px; white-space: nowrap; }
+        .cta-button { display:inline-flex; align-items:center; background-color:var(--accent-green); color:var(--white); padding:18px 35px; font-size:1.3em; font-weight:700; border-radius:8px; transition:0.3s; box-shadow:0 8px 20px rgba(40,167,69,0.3); margin-bottom:25px; gap:10px; }
         .cta-button i { font-size:1.2em; }
         .cta-button:hover{ background-color:#218838; transform:translateY(-3px); box-shadow:0 12px 25px rgba(40,167,69,0.4);}
         .pulse { animation:pulse 2s infinite; }
@@ -91,24 +76,10 @@
         .footer-links a:hover{ color:var(--primary-blue); }
 
         /* Responsive */
-        @media (max-width:1200px) {
-            .hero-section .container{ flex-direction: column; text-align:center; white-space: normal; }
-            .hero-content h1, .hero-content .subheadline, .hero-content .description, .hero-content .success-text {
-                display:block;
-                margin-right:0;
-                font-size:2em;
-            }
-            .cta-button{ font-size:1.3em; padding:18px 35px; }
-        }
-        @media (max-width:768px){ 
-            .hero-content h1{ font-size:2em;} 
-            .hero-content .subheadline{ font-size:1.2em; } 
-            .cta-button{ font-size:1em; padding:12px 25px; } 
-        }
-        @media (max-width:480px){ 
-            .navbar{ flex-direction:column; gap:15px; } 
-            .hero-content h1{ font-size:1.8em; } 
-        }
+        @media (max-width:992px){ .hero-section .container{ flex-direction:column; text-align:center;} .hero-image{ margin-top:40px;} .cta-content h2{ font-size:2em;} .cta-content p{ font-size:1em;} }
+        @media (max-width:768px){ .hero-content h1{ font-size:2em;} .hero-content .subheadline{ font-size:1.1em;} .cta-button{ font-size:1em; padding:12px 25px; } }
+        @media (max-width:480px){ .navbar{ flex-direction:column; gap:15px; } .hero-content h1{ font-size:1.8em; } }
+
     </style>
 </head>
 <body>
@@ -138,7 +109,62 @@
     </div>
 </section>
 
-<!-- Benefits and Bottom CTA remain unchanged -->
+<section class="benefits-section">
+    <div class="container">
+        <h2>আমাদের সাথে কাজ করার সুবিধা</h2>
+        <div class="benefits-grid">
+            <div class="benefit-card">
+                <div class="icon-circle"><i class="fas fa-home"></i></div>
+                <h3>ঘরে বসে কাজের সুযোগ</h3>
+                <p>আপনার সুবিধামত সময়ে, পৃথিবীর যেকোনো স্থান থেকে কাজ করুন।</p>
+            </div>
+            <div class="benefit-card">
+                <div class="icon-circle"><i class="fas fa-sack-dollar"></i></div>
+                <h3>দৈনিক ইনকাম নিশ্চিত</h3>
+                <p>প্রতিদিন আপনার কাজের ফলস্বরূপ নিশ্চিত ইনকাম পান।</p>
+            </div>
+            <div class="benefit-card">
+                <div class="icon-circle"><i class="fas fa-graduation-cap"></i></div>
+                <h3>কোনো অভিজ্ঞতা ছাড়াই শুরু</h3>
+                <p>আমরা আপনাকে শুরু থেকে সবকিছু শিখিয়ে দেব, অভিজ্ঞতার প্রয়োজন নেই।</p>
+            </div>
+            <div class="benefit-card">
+                <div class="icon-circle"><i class="fas fa-headset"></i></div>
+                <h3>২৪/৭ ঘন্টা সাপোর্ট</h3>
+                <p>যেকোনো সমস্যা বা প্রশ্নে আমরা সবসময় আপনার পাশে থাকব।</p>
+            </div>
+        </div>
+    </div>
+</section>
 
+<section class="call-to-action-bottom">
+    <div class="cta-content">
+        <h2>আপনার ইনকামের যাত্রা শুরু করুন আজই!</h2>
+        <p>আর দেরি নয়! Leads Hunters Team-এ যোগ দিয়ে আপনার অনলাইন ইনকামের স্বপ্ন পূরণ করুন।</p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScfUXNYdWpe9BuUumKDlSezkA-NINDXp8m_QYsacU72W5c8Ag/viewform" target="_blank" class="cta-button bottom-cta">
+            <i class="fas fa-clipboard-list"></i> ফর্মটি পূরণ করুন এখনই
+        </a>
+    </div>
+</section>
+
+<footer class="main-footer">
+    <div class="container">
+        <p>&copy; 2025 Leads Hunters Team | সর্বস্বত্ব সংরক্ষিত।</p>
+        <div class="footer-links">
+            <a href="#">গোপনীয়তা নীতি</a>
+            <a href="#">শর্তাবলী</a>
+        </div>
+    </div>
+</footer>
+
+<script>
+    document.querySelectorAll('a[href^="#"]').forEach(anchor=>{
+        anchor.addEventListener('click',function(e){
+            e.preventDefault();
+            document.querySelector(this.getAttribute('href')).scrollIntoView({behavior:'smooth'});
+        });
+    });
+</script>
 </body>
 </html>
+
